// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createOneofUnionTypeCode > protobuf-es > 'generates code for a required oneof union with .value accessor' 1`] = `
"import { builder } from "../../builder";

export const OneofParentRequiredOneofMembers$Ref = builder.unionType(
  "OneofParentRequiredOneofMembers",
  {
    types: [OneofMemberMessage1$Ref, OneofMemberMessage2$Ref],
    description: "Required. disallow not_set.",
    extensions: {
      protobufOneof: {
        fullName:
          "testapis.oneof.message_only.OneofParent.required_oneof_members",
        name: "required_oneof_members",
        messageName: "OneofParent",
        package: "testapis.oneof.message_only",
        fields: [{
          name: "required_message1",
          type: "testapis.oneof.message_only.OneofMemberMessage1",
        }, {
          name: "required_message2",
          type: "testapis.oneof.message_only.OneofMemberMessage2",
        }],
      },
    },
  },
);
"
`;

exports[`createOneofUnionTypeCode > protobuf-es > 'generates code for a squashed oneof union with .value accessor' 1`] = `
"import { builder } from "../../builder";

export const PrefixedMessageSquashedMessage$Ref = builder.unionType(
  "PrefixedMessageSquashedMessage",
  {
    types: [PrefixedMessageInnerMessage$Ref, PrefixedMessageInnerMessage2$Ref],
    extensions: {
      protobufOneof: {
        fullName:
          "testapis.options.message_and_field.PrefixedMessage.SquashedMessage",
        name: "SquashedMessage",
        package: "testapis.options.message_and_field",
        fields: [{
          name: "oneof_field",
          type:
            "testapis.options.message_and_field.PrefixedMessage.InnerMessage",
          options: { "[graphql.object_type]": { squashUnion: true } },
        }, {
          name: "oneof_field_2",
          type:
            "testapis.options.message_and_field.PrefixedMessage.InnerMessage2",
          options: { "[graphql.object_type]": { squashUnion: true } },
        }],
      },
    },
  },
);
"
`;

exports[`createOneofUnionTypeCode > protobuf-es > 'generates code for an optional oneof union with .value accessor' 1`] = `
"import { builder } from "../../builder";

export const OneofParentOptionalOneofMembers$Ref = builder.unionType(
  "OneofParentOptionalOneofMembers",
  {
    types: [OneofMemberMessage1$Ref, OneofMemberMessage2$Ref],
    extensions: {
      protobufOneof: {
        fullName:
          "testapis.oneof.message_only.OneofParent.optional_oneof_members",
        name: "optional_oneof_members",
        messageName: "OneofParent",
        package: "testapis.oneof.message_only",
        fields: [{
          name: "optional_message1",
          type: "testapis.oneof.message_only.OneofMemberMessage1",
        }, {
          name: "optional_message2",
          type: "testapis.oneof.message_only.OneofMemberMessage2",
        }],
      },
    },
  },
);
"
`;

exports[`createOneofUnionTypeCode > protobuf-es > 'generates code for imported oneof member with .value accessor' 1`] = `
"import { builder } from "../../builder";
import {
  OneofMember1$Ref,
  OneofMember2$Ref,
} from "./testapis/imports/oneof_cross_file/member.pothos";

export const OneofParentOneofField$Ref = builder.unionType(
  "OneofParentOneofField",
  {
    types: [OneofMember1$Ref, OneofMember2$Ref],
    extensions: {
      protobufOneof: {
        fullName: "testapis.imports.oneof_cross_file.OneofParent.oneof_field",
        name: "oneof_field",
        messageName: "OneofParent",
        package: "testapis.imports.oneof_cross_file",
        fields: [{
          name: "member1",
          type: "testapis.imports.oneof_cross_file.OneofMember1",
        }, {
          name: "member2",
          type: "testapis.imports.oneof_cross_file.OneofMember2",
        }],
      },
    },
  },
);
"
`;

exports[`createOneofUnionTypeCode > protobuf-es-v1 > 'generates code for a required oneof union' 1`] = `
"import { builder } from "../../builder";

export const OneofParentRequiredOneofMembers$Ref = builder.unionType(
  "OneofParentRequiredOneofMembers",
  {
    types: [OneofMemberMessage1$Ref, OneofMemberMessage2$Ref],
    description: "Required. disallow not_set.",
    extensions: {
      protobufOneof: {
        fullName:
          "testapis.oneof.message_only.OneofParent.required_oneof_members",
        name: "required_oneof_members",
        messageName: "OneofParent",
        package: "testapis.oneof.message_only",
        fields: [{
          name: "required_message1",
          type: "testapis.oneof.message_only.OneofMemberMessage1",
        }, {
          name: "required_message2",
          type: "testapis.oneof.message_only.OneofMemberMessage2",
        }],
      },
    },
  },
);
"
`;

exports[`createOneofUnionTypeCode > protobuf-es-v1 > 'generates code for a squashed oneof union' 1`] = `
"import { builder } from "../../builder";

export const PrefixedMessageSquashedMessage$Ref = builder.unionType(
  "PrefixedMessageSquashedMessage",
  {
    types: [PrefixedMessageInnerMessage$Ref, PrefixedMessageInnerMessage2$Ref],
    extensions: {
      protobufOneof: {
        fullName:
          "testapis.options.message_and_field.PrefixedMessage.SquashedMessage",
        name: "SquashedMessage",
        package: "testapis.options.message_and_field",
        fields: [{
          name: "oneof_field",
          type:
            "testapis.options.message_and_field.PrefixedMessage.InnerMessage",
          options: { "[graphql.object_type]": { squashUnion: true } },
        }, {
          name: "oneof_field_2",
          type:
            "testapis.options.message_and_field.PrefixedMessage.InnerMessage2",
          options: { "[graphql.object_type]": { squashUnion: true } },
        }],
      },
    },
  },
);
"
`;

exports[`createOneofUnionTypeCode > protobuf-es-v1 > 'generates code for an optional oneof union' 1`] = `
"import { builder } from "../../builder";

export const OneofParentOptionalOneofMembers$Ref = builder.unionType(
  "OneofParentOptionalOneofMembers",
  {
    types: [OneofMemberMessage1$Ref, OneofMemberMessage2$Ref],
    extensions: {
      protobufOneof: {
        fullName:
          "testapis.oneof.message_only.OneofParent.optional_oneof_members",
        name: "optional_oneof_members",
        messageName: "OneofParent",
        package: "testapis.oneof.message_only",
        fields: [{
          name: "optional_message1",
          type: "testapis.oneof.message_only.OneofMemberMessage1",
        }, {
          name: "optional_message2",
          type: "testapis.oneof.message_only.OneofMemberMessage2",
        }],
      },
    },
  },
);
"
`;

exports[`createOneofUnionTypeCode > ts-proto > 'generates code for a required oneof union' 1`] = `
"import { builder } from "../../builder";

export const OneofParentRequiredOneofMembers$Ref = builder.unionType(
  "OneofParentRequiredOneofMembers",
  {
    types: [OneofMemberMessage1$Ref, OneofMemberMessage2$Ref],
    description: "Required. disallow not_set.",
    extensions: {
      protobufOneof: {
        fullName:
          "testapis.oneof.message_only.OneofParent.required_oneof_members",
        name: "required_oneof_members",
        messageName: "OneofParent",
        package: "testapis.oneof.message_only",
        fields: [{
          name: "required_message1",
          type: "testapis.oneof.message_only.OneofMemberMessage1",
        }, {
          name: "required_message2",
          type: "testapis.oneof.message_only.OneofMemberMessage2",
        }],
      },
    },
  },
);
"
`;

exports[`createOneofUnionTypeCode > ts-proto > 'generates code for a squashed oneof union' 1`] = `
"import { builder } from "../../builder";

export const PrefixedMessageSquashedMessage$Ref = builder.unionType(
  "PrefixedMessageSquashedMessage",
  {
    types: [PrefixedMessageInnerMessage$Ref, PrefixedMessageInnerMessage2$Ref],
    extensions: {
      protobufOneof: {
        fullName:
          "testapis.options.message_and_field.PrefixedMessage.SquashedMessage",
        name: "SquashedMessage",
        package: "testapis.options.message_and_field",
        fields: [{
          name: "oneof_field",
          type:
            "testapis.options.message_and_field.PrefixedMessage.InnerMessage",
          options: { "[graphql.object_type]": { squashUnion: true } },
        }, {
          name: "oneof_field_2",
          type:
            "testapis.options.message_and_field.PrefixedMessage.InnerMessage2",
          options: { "[graphql.object_type]": { squashUnion: true } },
        }],
      },
    },
  },
);
"
`;

exports[`createOneofUnionTypeCode > ts-proto > 'generates code for an optional oneof union' 1`] = `
"import { builder } from "../../builder";

export const OneofParentOptionalOneofMembers$Ref = builder.unionType(
  "OneofParentOptionalOneofMembers",
  {
    types: [OneofMemberMessage1$Ref, OneofMemberMessage2$Ref],
    extensions: {
      protobufOneof: {
        fullName:
          "testapis.oneof.message_only.OneofParent.optional_oneof_members",
        name: "optional_oneof_members",
        messageName: "OneofParent",
        package: "testapis.oneof.message_only",
        fields: [{
          name: "optional_message1",
          type: "testapis.oneof.message_only.OneofMemberMessage1",
        }, {
          name: "optional_message2",
          type: "testapis.oneof.message_only.OneofMemberMessage2",
        }],
      },
    },
  },
);
"
`;

exports[`createOneofUnionTypeCode > ts-proto > 'generates code for imported oneof member' 1`] = `
"import { builder } from "../../builder";
import {
  OneofMember1$Ref,
  OneofMember2$Ref,
} from "./testapis/imports/oneof_cross_file/member.pothos";

export const OneofParentOneofField$Ref = builder.unionType(
  "OneofParentOneofField",
  {
    types: [OneofMember1$Ref, OneofMember2$Ref],
    extensions: {
      protobufOneof: {
        fullName: "testapis.imports.oneof_cross_file.OneofParent.oneof_field",
        name: "oneof_field",
        messageName: "OneofParent",
        package: "testapis.imports.oneof_cross_file",
        fields: [{
          name: "member1",
          type: "testapis.imports.oneof_cross_file.OneofMember1",
        }, {
          name: "member2",
          type: "testapis.imports.oneof_cross_file.OneofMember2",
        }],
      },
    },
  },
);
"
`;
